# vim-niri-nav-rs

./: .mergify.yml  Cargo.toml  README.md  build.rs  flake.nix  vim-niri-nav
.hydra/: jobsets.nix  spec.json
rpc/: Cargo.toml
rpc/src/: main.rs
src/: args.rs  main.rs
