[package]
name = "vim-niri-nav"
version = "0.1.0"
edition = "2021"

[features]
default = ["niri-ipc"]
niri-ipc = ["dep:niri-ipc"]

[dependencies]
clap = { version = "4", features = ["derive"] }
niri-ipc = { version = "26.4.0", optional = true }
nix = { version = "0.29", features = ["signal"] }
rmpv = "1"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
